renamed community-ec2 to community-organizations (becuase community-ec2 didnt register? properly)

--- a/ec2/no-default-vpc/.rpdk-config
+++ b/ec2/no-default-vpc/.rpdk-config
@@ -1,5 +1,5 @@
 {
-    "typeName": "Community::EC2::NoDefaultVPC",
+    "typeName": "Community::Organizations::NoDefaultVPC",
     "language": "typescript",
     "runtime": "nodejs12.x",
     "entrypoint": "dist/handlers.entrypoint",
