--- a/ec2/no-default-vpc/example.yml
+++ b/ec2/no-default-vpc/example.yml
@@ -2,6 +2,6 @@ AWSTemplateFormatVersion: 2010-09-09
 
 Resources:
   NoDefaultVpc:
-    Type: 'Community::EC2::NoDefaultVpc'
+    Type: 'Community::Organizations::NoDefaultVPC'
     Properties:
         Name: 'asd'
