--- a/ec2/no-default-vpc/template.yml
+++ b/ec2/no-default-vpc/template.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Transform: AWS::Serverless-2016-10-31
-Description: AWS SAM template for the Community::EC2::NoDefaultVPC resource type
+Description: AWS SAM template for the Community::Organizations::NoDefaultVPC resource type
 
 Globals:
   Function:
