added read handler

--- a/organizations/policy/resource-role.yaml
+++ b/organizations/policy/resource-role.yaml
@@ -26,6 +26,7 @@ Resources:
                 - "organizations:AttachPolicy"
                 - "organizations:CreatePolicy"
                 - "organizations:DeletePolicy"
+                - "organizations:DescribePolicy"
                 - "organizations:DetachPolicy"
                 - "organizations:UpdatePolicy"
                 Resource: "*"
