--- a/common/package.json
+++ b/common/package.json
@@ -1,13 +1,13 @@
 {
     "name": "aws-resource-providers-common",
-    "version": "0.2.0",
+    "version": "0.2.1",
     "description": "",
     "private": false,
     "main": "dist/index.js",
     "scripts": {
         "build": "npx tsc",
         "prepublishOnly": "npm run build",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "npx jest --config ../jest.config.js --rootDir ."
     },
     "files": [
         "dist/**/*"
@@ -15,7 +15,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.2/cfn-rpdk-0.3.2.tgz"
+        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@0.x"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
