update common lib to newer version

--- a/code-commit/approval-rule-template/example.yml
+++ b/code-commit/approval-rule-template/example.yml
@@ -4,7 +4,7 @@ Resources:
     Type: 'Community::CodeCommit::ApprovalRuleTemplate'
     Properties:
       Name: 'test'
-      Description: : 'test'
+      Description: 'test'
       Content:
         Version: '2018-11-08'
         DestinationReferences:
