--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aws-resource-providers-common",
-    "version": "0.2.1",
+    "version": "0.2.3",
     "description": "Common patterns and code that can be used when developing resource type providers for AWS CloudFormation.",
     "private": false,
     "main": "dist/index.js",
@@ -22,6 +22,7 @@
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
+        "class-transformer": "^0.3.1",
         "typescript": "^3.8.3"
     },
     "optionalDependencies": {
