--- a/code-commit/repository-association/resource-role.yaml
+++ b/code-commit/repository-association/resource-role.yaml
@@ -27,6 +27,8 @@ Resources:
                 - "codecommit:BatchAssociateApprovalRuleTemplateWithRepositories"
                 - "codecommit:BatchDisassociateApprovalRuleTemplateFromRepositories"
                 - "codecommit:DisassociateApprovalRuleTemplateFromRepository"
+                - "codecommit:GetApprovalRuleTemplate"
+                - "codecommit:ListApprovalRuleTemplates"
                 - "codecommit:ListRepositoriesForApprovalRuleTemplate"
                 Resource: "*"
 Outputs:
