update all dependencies

--- a/lerna.json
+++ b/lerna.json
@@ -3,5 +3,5 @@
     "**/*"
   ],
   "version": "independent",
-  "npmClientArgs": ["--no-optional"]
+  "npmClientArgs": ["--no-optional", "--production=false"]
 }
