--- a/service-quotas/cloud-formation/package.json
+++ b/service-quotas/cloud-formation/package.json
@@ -20,9 +20,9 @@
         "validate": "cfn validate"
     },
     "dependencies": {
-        "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.0/cfn-rpdk-0.3.0.tgz",
-        "class-transformer": "^0.3.1",
-        "community-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.1.0/community-resource-providers-common-0.1.2.tgz"
+        "aws-resource-providers-common": "^0.2.0",
+        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.4.0",
+        "class-transformer": "^0.3.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
