--- a/service-quotas/s3/package.json
+++ b/service-quotas/s3/package.json
@@ -13,7 +13,7 @@
         "submit": "npm run prepack && cfn submit -vv --region eu-west-1 --set-default",
         "package": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
         "version": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "npx jest --config ../../jest.config.js --rootDir ."
     },
     "dependencies": {
         "aws-resource-providers-common": "^0.2.0",
