feat: Update dependencies to newer version (#30)
There is a new release for both rpdk and common library. So we need to update as well as the automated testing.

* initial resource type config

* add logic and unit tests

* create additional sam tests

* update test failing

* reformat according to new linting config

* fix linting issues

* improve update unit test

* revert create operation change

* update rule properties formatting

* regenerate documentation and model

* add repository association resource

* fail test with unhandled rejection

* add npmrc to each subfolder

* refactor rule template resource

* redo rule template lock file

* simplify rule template model

* refactor repository association resource

* fix batch response check

* update readme

* support for logger proxy

* add license and info to common package

* remove code commit resources

* fix password policy unit tests

* update all dependencies

* update delay unit tests

* update s3 access block unit tests

* update ec2 ebs encryption unit tests

* increase test coverage

* fix bootstrapping and tests

* set setup node back to v1

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Install Dependencies Node.js
         id: install_nodejs
         run: |
-          npm ci --optional && npx lerna bootstrap --ci && npm run build
+          npm run bootstrap -- --ci && npm run build
       - name: Run Automated Testing
         id: automated_testing
         run: |
