update rpdk and common dependencies

--- a/organizations/policy/resource-role.yaml
+++ b/organizations/policy/resource-role.yaml
@@ -28,6 +28,7 @@ Resources:
                 - "organizations:DeletePolicy"
                 - "organizations:DescribePolicy"
                 - "organizations:DetachPolicy"
+                - "organizations:ListTargetsForPolicy"
                 - "organizations:UpdatePolicy"
                 Resource: "*"
 Outputs:
