fix(community-sso-assignmentgroup): quite a bit of cleanup

--- a/sso/assignment-group/package.json
+++ b/sso/assignment-group/package.json
@@ -1,6 +1,6 @@
 {
     "name": "community-sso-assignmentgroup",
-    "version": "0.2.0",
+    "version": "0.3.0",
     "description": "AWS custom resource provider named Community::SSO::AssignmentGroup.",
     "main": "dist/handlers.js",
     "files": [
@@ -14,9 +14,10 @@
         "submit": "npm run prepack && cfn submit -vv --region eu-west-1 --set-default",
         "package": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
         "version": "aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "npx jest --config ../../jest.config.js --rootDir ."
     },
     "dependencies": {
+        "aws-resource-providers-common": "^0.2.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.4.0",
         "class-transformer": "^0.3.1",
         "uuid": "^7.0.3",
