--- a/sso/assignment-group/tsconfig.json
+++ b/sso/assignment-group/tsconfig.json
@@ -1,19 +1,9 @@
 {
+    "extends": "../../tsconfig.json",
     "compilerOptions": {
-        "target": "ES2017",
-        "module": "commonjs",
-        "noImplicitAny": true,
-        "alwaysStrict": true,
-        "esModuleInterop": true,
-        "moduleResolution": "node",
-        "allowJs": false,
-        "experimentalDecorators": true,
-        "outDir": "dist",
+        "outDir": "dist"
     },
     "include": [
-        "src/**/*.ts",
-    ],
-    "exclude": [
-        "node_modules"
+        "src/**/*.ts"
     ]
 }
