--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "scripts": {
         "bootstrap": "npm ci --optional && npx lerna exec npm ci",
-        "reset": "npm run cleanup && npx rimraf -rf **/node_modules && npm run bootstrap",
+        "reset": "npm run cleanup && npx lerna exec --stream --parallel -- rm -rf ./node_modules ./build && npm run bootstrap",
         "cleanup": "npx lerna run cleanup --stream --parallel",
         "build": "npx lerna run build",
         "lint": "npx eslint --ext .ts,.js .",
@@ -41,7 +41,7 @@
         "@types/node": "^12.0.0",
         "@typescript-eslint/eslint-plugin": "^4.0.1",
         "@typescript-eslint/parser": "^4.0.1",
-        "aws-sdk": "~2.712.0",
+        "aws-sdk": "~2.750.0",
         "eslint": "^7.7.0",
         "eslint-config-prettier": "^6.11.0",
         "eslint-import-resolver-node": "^0.3.4",
