--- a/sso/assignment-group/package.json
+++ b/sso/assignment-group/package.json
@@ -14,14 +14,14 @@
         "submit": "npm run prepack && cfn submit -vv --region eu-west-1 --set-default",
         "package": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
         "version": "aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
-        "test": "npx jest --config ../../jest.config.js --rootDir ."
+        "test": "npx jest"
     },
     "dependencies": {
         "aws-resource-providers-common": "^0.2.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.4.0",
         "class-transformer": "^0.3.1",
         "uuid": "^7.0.3",
-        "aws-sdk": "2.775.0"
+        "aws-sdk": "2.750.0"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
