--- a/organizations/policy/package.json
+++ b/organizations/policy/package.json
@@ -13,7 +13,7 @@
         "submit": "npm run prepack && cfn submit -vv --region us-east-1 --set-default",
         "package": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
         "version": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
-        "test": "npx jest --config ../../jest.config.js --rootDir .",
+        "test": "npx jest",
         "test:integration": "npx npm-run-all -p -r samstart cfntest",
         "cfntest": "cfn test -vv >> cfn.log",
         "samstart": "sam local start-lambda -l sam.log",
@@ -33,8 +33,8 @@
         "npm": ">=6.0.0"
     },
     "dependencies": {
-        "aws-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.2.0/aws-resource-providers-common-0.2.0.tgz",
-        "cfn-rpdk": "https://github.com/eduardomourar/cloudformation-cli-typescript-plugin/releases/download/v0.3.2/cfn-rpdk-0.3.2.tgz",
+        "aws-resource-providers-common": "^0.2.0",
+        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.4.0",
         "class-transformer": "^0.3.1",
         "uuid": "^7.0.3"
     },
