--- a/common/package.json
+++ b/common/package.json
@@ -10,7 +10,7 @@
     "scripts": {
         "build": "npx tsc",
         "prepublishOnly": "npm run build",
-        "test": "npx jest --config ../jest.config.js --rootDir ."
+        "test": "npx jest"
     },
     "files": [
         "dist/**/*"
@@ -22,10 +22,16 @@
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
+        "aws-sdk": "^2.712.0",
         "class-transformer": "^0.3.1",
         "typescript": "^3.8.3"
     },
-    "optionalDependencies": {
-        "aws-sdk": "^2.656.0"
+    "peerDependencies": {
+        "aws-sdk": "^2.712.0"
+    },
+    "peerDependenciesMeta": {
+        "aws-sdk": {
+            "optional": true
+        }
     }
 }
