--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aws-resource-providers-common",
-    "version": "0.2.3",
+    "version": "0.3.0",
     "description": "Common patterns and code that can be used when developing resource type providers for AWS CloudFormation.",
     "private": false,
     "main": "dist/index.js",
@@ -9,8 +9,8 @@
     },
     "scripts": {
         "build": "npx tsc",
-        "prepublishOnly": "npm run build",
-        "test": "npx jest --config ../jest.config.js --rootDir ."
+        "prepack": "npm run build",
+        "test": "npx jest"
     },
     "files": [
         "dist/**/*"
@@ -22,10 +22,16 @@
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
+        "aws-sdk": "^2.712.0",
         "class-transformer": "^0.3.1",
         "typescript": "^3.8.3"
     },
-    "optionalDependencies": {
-        "aws-sdk": "^2.656.0"
+    "peerDependencies": {
+        "aws-sdk": "^2.712.0"
+    },
+    "peerDependenciesMeta": {
+        "aws-sdk": {
+            "optional": true
+        }
     }
 }
