add new jest runner and update dependencies

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "build": "npx lerna run build",
         "lint": "npx eslint --ext .ts,.js .",
         "lint:fix": "npx eslint --fix --ext .ts,.js .",
-        "test": "npx jest --runInBand --no-cache",
-        "test:silent": "jest --runInBand --reporters jest-silent-reporter",
+        "test": "npx jest",
+        "test:silent": "jest --reporters jest-silent-reporter",
         "test:debug": "npx --node-arg=--inspect jest --runInBand",
         "test:integration": "npx lerna run test:integration -- -vv",
         "validate": "npx lerna run validate -- -vv"
@@ -35,28 +35,29 @@
         "class-transformer": "^0.3.1"
     },
     "devDependencies": {
-        "@jurijzahn8019/aws-promise-jest-mock": "^2.1.5",
+        "@jurijzahn8019/aws-promise-jest-mock": "^2.3.1",
         "@tsconfig/node10": "^1.0.7",
-        "@types/jest": "^26.0.1",
+        "@types/jest": "^26.0.16",
         "@types/node": "^12.0.0",
-        "@typescript-eslint/eslint-plugin": "^4.0.1",
-        "@typescript-eslint/parser": "^4.0.1",
+        "@typescript-eslint/eslint-plugin": "^4.8.1",
+        "@typescript-eslint/parser": "^4.8.1",
         "aws-sdk": "~2.750.0",
-        "eslint": "^7.7.0",
-        "eslint-config-prettier": "^6.11.0",
-        "eslint-import-resolver-node": "^0.3.4",
-        "eslint-import-resolver-typescript": "^2.2.1",
-        "eslint-plugin-import": "^2.22.0",
+        "eslint": "^7.13.0",
+        "eslint-config-prettier": "^6.15.0",
+        "eslint-import-resolver-node": "^0.3.3",
+        "eslint-import-resolver-typescript": "^2.3.0",
+        "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-prefer-arrow": "^1.2.2",
-        "eslint-plugin-prettier": "^3.1.4",
-        "jest": "^26.4.2",
-        "jest-silent-reporter": "^0.2.1",
+        "eslint-plugin-prettier": "^3.1.3",
+        "jest": "^26.6.3",
+        "jest-circus": "^26.6.3",
+        "jest-silent-reporter": "^0.4.0",
         "lerna": "^3.22.1",
         "npm-run-all": "^4.1.5",
-        "prettier": "^2.1.1",
+        "prettier": "^2.2.1",
         "rimraf": "^3.0.2",
-        "ts-jest": "^26.3.0",
-        "typescript": "^3.8.3"
+        "ts-jest": "^26.4.4",
+        "typescript": "^4.1.2"
     },
     "prettier": {
         "parser": "typescript",
