--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
     "description": "A community driven repository where you can find AWS Resource Type Providers for different purposes.",
     "private": true,
     "scripts": {
-        "bootstrap": "npm ci --optional && npx lerna exec npm ci",
+        "bootstrap": "npm ci --optional && npx lerna bootstrap --hoist",
         "reset": "npm run cleanup && npx lerna exec --stream --parallel -- rm -rf ./node_modules ./build && npm run bootstrap",
         "cleanup": "npx lerna run cleanup --stream --parallel",
         "build": "npx lerna run build",
         "lint": "npx eslint --ext .ts,.js .",
         "lint:fix": "npx eslint --fix --ext .ts,.js .",
-        "test": "npx jest --run-in-band",
-        "test:silent": "jest --reporters jest-silent-reporter",
+        "test": "npx jest",
+        "test:silent": "jest --run-in-band --reporters jest-silent-reporter",
         "test:debug": "npx --node-arg=--inspect jest --runInBand",
         "test:integration": "npx lerna run test:integration -- -vv",
         "validate": "npx lerna run validate -- -vv"
