--- a/common/package.json
+++ b/common/package.json
@@ -22,7 +22,7 @@
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
-        "aws-sdk": "^2.712.0",
+        "aws-sdk": "~2.750.0",
         "class-transformer": "^0.3.1",
         "typescript": "^4.1.2"
     },
