chore(community-iam-openidconnectprovider): updated example

--- a/iam/oidc-providers/example.yml
+++ b/iam/oidc-providers/example.yml
@@ -6,5 +6,5 @@ Resources:
       Url: "https://host/path"
       ThumbprintList:
         - "00000aaaaabbbbbccccdddddeeeffff111222233"
-      ClientIDList:
+      ClientIdList:
         - "client-id"
