--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
         "@types/node": "^12.0.0",
         "@typescript-eslint/eslint-plugin": "^4.8.1",
         "@typescript-eslint/parser": "^4.8.1",
-        "aws-sdk": "~2.750.0",
+        "aws-sdk": "^2.656.0",
         "eslint": "^7.13.0",
         "eslint-config-prettier": "^6.15.0",
         "eslint-import-resolver-node": "^0.3.3",
