--- a/sso/assignment-group/package.json
+++ b/sso/assignment-group/package.json
@@ -20,12 +20,14 @@
         "aws-resource-providers-common": "^0.3.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.5.0",
         "class-transformer": "^0.3.1",
-        "uuid": "^7.0.3",
-        "aws-sdk": "2.750.0"
+        "uuid": "^7.0.3"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
         "@types/uuid": "^7.0.3",
         "typescript": "^4.1.2"
+    },
+    "optionalDependencies": {
+        "aws-sdk": "^2.656.0"
     }
 }
