update tsconfig to node 12

--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -41,7 +41,7 @@ jobs:
         id: automated_testing
         run: |
           npm run lint
-          npm test
+          npm run test:ci
       - name: Upload Coverage
         id: codecov
         run: |
