--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,5 @@
 {
-    "extends": "@tsconfig/node10/tsconfig.json",
+    "extends": "@tsconfig/node12/tsconfig.json",
     "compilerOptions": {
         "noImplicitAny": true,
         "allowJs": true,
@@ -13,7 +13,7 @@
         "outDir": "dist"
     },
     "include": [
-        "src/**/*.ts"
+        "**/src/**/*.ts"
     ],
     "exclude": [
         "**/node_modules"
