--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "lint": "npx eslint --ext .ts,.js .",
         "lint:fix": "npx eslint --fix --ext .ts,.js .",
         "test": "npx jest --run-in-band --silent",
-        "test:ci": "npx jest --run-in-band --logHeapUsage --no-cache --silent --collect-coverage --coverage-provider v8 --ci",
+        "test:ci": "npx jest --logHeapUsage --no-cache --silent --collect-coverage --ci",
         "test:silent": "npx jest --run-in-band --reporters jest-silent-reporter",
         "test:debug": "npx --node-arg=--inspect jest --runInBand",
         "test:integration": "npx lerna run test:integration -- -vv",
@@ -51,14 +51,14 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-prefer-arrow": "^1.2.2",
         "eslint-plugin-prettier": "^3.1.3",
-        "jest": "^26.4.2",
-        "jest-circus": "^26.4.2",
+        "jest": "^26.6.3",
+        "jest-circus": "^26.6.3",
         "jest-silent-reporter": "^0.4.0",
         "lerna": "^3.22.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.2.1",
         "rimraf": "^3.0.2",
-        "ts-jest": "^26.3.0",
+        "ts-jest": "^26.4.4",
         "typescript": "^4.1.2"
     },
     "prettier": {
