--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -19,7 +19,7 @@ jobs:
       AWS_DEFAULT_REGION: "eu-central-1"
       LOG_PATH: /tmp/debug-logs
       PIP_LOG_FILE: /tmp/pip.log
-      NODE_OPTIONS: "--max_old_space_size=4096"
+      NODE_OPTIONS: "--max_old_space_size=7000"
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v1
@@ -41,7 +41,7 @@ jobs:
         id: automated_testing
         run: |
           npm run lint
-          npm test
+          npm run test:ci
       - name: Upload Coverage
         id: codecov
         run: |
