fix: node client threw on error on these fields not being the right type... this something that can be fixed in the rpdk?

--- a/s3/public-access-block/resource-role.yaml
+++ b/s3/public-access-block/resource-role.yaml
@@ -15,7 +15,7 @@ Resources:
             Principal:
               Service: resources.cloudformation.amazonaws.com
             Action: sts:AssumeRole
-      Path: "/"
+      Path: "/community-types/"
       Policies:
         - PolicyName: ResourceTypePolicy
           PolicyDocument:
