--- a/s3/public-access-block/package.json
+++ b/s3/public-access-block/package.json
@@ -1,6 +1,6 @@
 {
     "name": "community-s3-publicaccessblock",
-    "version": "0.2.0",
+    "version": "0.2.2",
     "description": "AWS custom resource provider named Community::S3::PublicAccessBlock.",
     "private": true,
     "main": "dist/handlers.js",
@@ -23,7 +23,7 @@
     "dependencies": {
         "aws-resource-providers-common": "^0.3.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^0.5.0",
-        "class-transformer": "^0.3.1"
+        "class-transformer": "0.3.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
