fix: review changes

--- a/service-quotas/dynamodb/.rpdk-config
+++ b/service-quotas/dynamodb/.rpdk-config
@@ -2,6 +2,7 @@
     "typeName": "Community::ServiceQuotas::DynamoDB",
     "language": "typescript",
     "runtime": "nodejs12.x",
+    "artifact_type": "RESOURCE",
     "entrypoint": "dist/handlers.entrypoint",
     "testEntrypoint": "dist/handlers.testEntrypoint",
     "settings": {
