--- a/service-quotas/iam2/.rpdk-config
+++ b/service-quotas/iam2/.rpdk-config
@@ -1,11 +1,18 @@
 {
+    "artifact_type": "RESOURCE",
     "typeName": "Community::ServiceQuotas::IAM",
     "language": "typescript",
     "runtime": "nodejs12.x",
     "entrypoint": "dist/handlers.entrypoint",
     "testEntrypoint": "dist/handlers.testEntrypoint",
     "settings": {
-        "useDocker": true,
+        "version": false,
+        "subparser_name": null,
+        "verbose": 0,
+        "force": false,
+        "type_name": null,
+        "artifact_type": null,
+        "useDocker": false,
         "protocolVersion": "2.0.0"
     }
 }
