--- a/service-quotas/iam2/package.json
+++ b/service-quotas/iam2/package.json
@@ -1,7 +1,7 @@
 {
-    "name": "community-servicequotas-cloudformation",
+    "name": "community-servicequotas-iam",
     "version": "0.1.0",
-    "description": "AWS custom resource provider named Community::ServiceQuotas::CloudFormation.",
+    "description": "AWS custom resource provider named Community::ServiceQuotas::IAM.",
     "private": true,
     "main": "dist/handlers.js",
     "files": [
@@ -9,9 +9,8 @@
     ],
     "scripts": {
         "build": "npx tsc",
-        "fixrolepath" : "sed 's/Path: \\\"\\/\\\"/Path: \\\"\\/community-types\\/\\\"/g' resource-role.yaml > tmp.txt && mv tmp.txt resource-role.yaml",
-        "prepack": "cfn generate && npm run build && npm run fixrolepath",
-        "submit": "npm run prepack && cfn submit -vv --region eu-west-1 --set-default",
+        "prepack": "cfn generate && npm run build",
+        "submit": "npm run prepack && cfn submit -vv --region us-east-1 --set-default",
         "package": "npm run prepack && cfn submit --dry-run -vv && cp ${npm_package_name}.zip ${npm_package_name}-${npm_package_version}.zip",
         "version": "npm run package && aws s3 cp ${npm_package_name}-${npm_package_version}.zip s3://community-resource-provider-catalog/${npm_package_name}-${npm_package_version}.zip && aws s3 cp resource-role.yaml s3://community-resource-provider-catalog/${npm_package_name}-resource-role-${npm_package_version}.yml",
         "test": "npx jest",
