--- a/organizations/policy/.rpdk-config
+++ b/organizations/policy/.rpdk-config
@@ -5,7 +5,7 @@
     "entrypoint": "dist/handlers.entrypoint",
     "testEntrypoint": "dist/handlers.testEntrypoint",
     "settings": {
-        "useDocker": true,
+        "useDocker": false,
         "protocolVersion": "2.0.0"
     }
 }
