--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,8 @@ jobs:
         id: install_python
         run: |
           mkdir "$LOG_PATH"
-          pip install --upgrade pip aws-sam-cli cloudformation-cli-typescript-plugin
+          pip install --upgrade pip
+          pip install --use-feature=2020-resolver aws-sam-cli cloudformation-cli-typescript-plugin
       - uses: actions/setup-node@v1
         with:
           node-version: 12
