--- a/account/alternate-contact/package.json
+++ b/account/alternate-contact/package.json
@@ -31,7 +31,7 @@
     "homepage": "https://github.com/org-formation/aws-resource-providers#readme",
     "dependencies": {
         "aws-resource-providers-common": "^0.4.0",
-        "cfn-rpdk": "npm:@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib@^1.0.1",
+        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "class-transformer": "0.3.1"
     },
     "devDependencies": {
