--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
     "name": "aws-resource-providers-common",
-    "version": "0.3.0",
+    "version": "0.4.0",
     "description": "Common patterns and code that can be used when developing resource type providers for AWS CloudFormation.",
     "private": false,
     "main": "dist/index.js",
@@ -18,7 +18,7 @@
     "author": "org-formation",
     "license": "MIT",
     "dependencies": {
-        "cfn-rpdk": "npm:@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib@^1.0.1"
+        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
