--- a/ec2/no-default-vpc/package.json
+++ b/ec2/no-default-vpc/package.json
@@ -21,7 +21,7 @@
     },
     "dependencies": {
         "aws-resource-providers-common": "^0.4.0",
-        "cfn-rpdk": "npm:@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib@^1.0.1",
+        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "class-transformer": "^0.3.1",
         "uuid": "^7.0.3"
     },
