--- a/package.json
+++ b/package.json
@@ -32,14 +32,13 @@
     },
     "homepage": "https://github.com/org-formation/aws-resource-providers#readme",
     "dependencies": {
-        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
-        "cfn-rpdk": "npm:@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib@^1.0.1",
+        "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "class-transformer": "^0.3.1"
     },
     "devDependencies": {
-        "@jurijzahn8019/aws-promise-jest-mock": "^2.3.1",
+        "@jurijzahn8019/aws-promise-jest-mock": "^2.4.28",
         "@tsconfig/node12": "^1.0.7",
-        "@types/jest": "^26.0.16",
+        "@types/jest": "^27.4.0",
         "@types/node": "^12.0.0",
         "@types/uuid": "^7.0.3",
         "@typescript-eslint/eslint-plugin": "^4.8.1",
@@ -52,14 +51,14 @@
         "eslint-plugin-import": "^2.22.1",
         "eslint-plugin-prefer-arrow": "^1.2.2",
         "eslint-plugin-prettier": "^3.1.3",
-        "jest": "^26.6.3",
-        "jest-circus": "^26.6.3",
-        "jest-silent-reporter": "^0.4.0",
+        "jest": "^27.4.7",
+        "jest-circus": "^27.4.6",
+        "jest-silent-reporter": "^0.5.0",
         "lerna": "^3.22.1",
         "npm-run-all": "^4.1.5",
         "prettier": "^2.2.1",
         "rimraf": "^3.0.2",
-        "ts-jest": "^26.4.4",
+        "ts-jest": "^27.1.3",
         "typescript": "^4.1.2"
     },
     "prettier": {
