--- a/security-hub/action-target/package.json
+++ b/security-hub/action-target/package.json
@@ -22,7 +22,7 @@
     "dependencies": {
         "aws-resource-providers-common": "^0.4.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
-        "class-transformer": "^0.3.1"
+        "class-transformer": "0.3.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
