--- a/cloud-formation/delay/package.json
+++ b/cloud-formation/delay/package.json
@@ -31,7 +31,7 @@
     "homepage": "https://github.com/org-formation/aws-resource-providers#readme",
     "dependencies": {
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
-        "class-transformer": "^0.3.1"
+        "class-transformer": "0.3.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
