--- a/common/package.json
+++ b/common/package.json
@@ -23,7 +23,7 @@
     "devDependencies": {
         "@types/node": "^12.0.0",
         "aws-sdk": "^2.1058.0",
-        "class-transformer": "^0.3.1",
+        "class-transformer": "0.3.1",
         "typescript": "^4.1.2"
     },
     "peerDependencies": {
