--- a/iam/oidc-providers/package.json
+++ b/iam/oidc-providers/package.json
@@ -22,11 +22,11 @@
     "dependencies": {
         "aws-resource-providers-common": "^0.4.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
-        "class-transformer": "^0.3.1"
+        "class-transformer": "0.3.1"
     },
     "devDependencies": {
         "@types/node": "^12.0.0",
-        "typescript": "^3.8.3"
+        "typescript": "^4.1.2"
     },
     "optionalDependencies": {
         "aws-sdk": "^2.1058.0"
