--- a/sso/assignment-group/package.json
+++ b/sso/assignment-group/package.json
@@ -20,7 +20,7 @@
     "dependencies": {
         "aws-resource-providers-common": "^0.4.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
-        "class-transformer": "^0.3.1",
+        "class-transformer": "0.3.1",
         "uuid": "^7.0.3"
     },
     "devDependencies": {
