--- a/iam/password-policy/package.json
+++ b/iam/password-policy/package.json
@@ -34,6 +34,7 @@
         "npm": ">=6.0.0"
     },
     "dependencies": {
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "aws-resource-providers-common": "^0.4.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "class-transformer": "0.3.1",
