--- a/organizations/policy/package.json
+++ b/organizations/policy/package.json
@@ -1,6 +1,6 @@
 {
     "name": "community-organizations-policy",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "description": "CloudFormation Resource Provider for AWS Organizations Policy",
     "private": true,
     "main": "dist/handlers.js",
@@ -34,6 +34,7 @@
         "npm": ">=6.0.0"
     },
     "dependencies": {
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "aws-resource-providers-common": "^0.4.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "class-transformer": "0.3.1",
