--- a/security-hub/action-target/package.json
+++ b/security-hub/action-target/package.json
@@ -20,6 +20,7 @@
         "validate": "cfn validate"
     },
     "dependencies": {
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "aws-resource-providers-common": "^0.4.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "class-transformer": "0.3.1"
