--- a/sso/assignment-group/package.json
+++ b/sso/assignment-group/package.json
@@ -18,6 +18,7 @@
         "test": "npx jest"
     },
     "dependencies": {
+        "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "aws-resource-providers-common": "^0.4.0",
         "cfn-rpdk": "npm:@org-formation/cfn-rpdk@^1.0.1",
         "class-transformer": "0.3.1",
