--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
         "sourceMap": false,
         "experimentalDecorators": true,
         "resolveJsonModule": true,
+        "esModuleInterop": true,
         "outDir": "dist"
     },
     "include": [
