--- a/organizations/policy/package.json
+++ b/organizations/policy/package.json
@@ -1,6 +1,6 @@
 {
     "name": "community-organizations-policy",
-    "version": "0.2.1",
+    "version": "0.2.2",
     "description": "CloudFormation Resource Provider for AWS Organizations Policy",
     "private": true,
     "main": "dist/handlers.js",
@@ -35,7 +35,7 @@
     },
     "dependencies": {
         "@amazon-web-services-cloudformation/cloudformation-cli-typescript-lib": "^1.0.1",
-        "aws-resource-providers-common": "https://github.com/org-formation/aws-resource-providers/releases/download/common-0.4.0/aws-resource-providers-common-0.4.0.tgz",
+        "aws-resource-providers-common": "^0.5.0",
         "class-transformer": "0.3.1",
         "uuid": "^7.0.3"
     },
@@ -45,6 +45,6 @@
         "typescript": "^4.1.2"
     },
     "optionalDependencies": {
-        "aws-sdk": "^2.656.0"
+        "aws-sdk": "^2.1058.0"
     }
 }
